--- a/central_tendency/main.ipynb
+++ b/central_tendency/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -25,10 +25,40 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "from statistics import mean\n",
     "\n",
     "state = pd.read_csv('Murdare_US_State.csv')\n",
     "state.info()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data Preprocessing\n",
+    "# Remove commas from the 'Population' column and convert it to numeric\n",
+    "state['Population'] = state['Population'].str.replace(',', '').astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7694135.625"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
