--- a/central_tendency/main.ipynb
+++ b/central_tendency/main.ipynb
@@ -2,25 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 8 entries, 0 to 7\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column        Non-Null Count  Dtype  \n",
-      "---  ------        --------------  -----  \n",
-      " 0   State         8 non-null      object \n",
-      " 1   Population    8 non-null      object \n",
-      " 2   Murder Rate   8 non-null      float64\n",
-      " 3   Abbreviation  8 non-null      object \n",
-      "dtypes: float64(1), object(3)\n",
-      "memory usage: 384.0+ bytes\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Murder Rate</th>\n",
+       "      <th>Abbreviation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>4779736</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>AL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>710231</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>AK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>6392017</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>AZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>2915918</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>AR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>California</td>\n",
+       "      <td>37253956</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>CA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        State  Population  Murder Rate Abbreviation\n",
+       "0     Alabama     4779736          5.7           AL\n",
+       "1      Alaska      710231          5.6           AK\n",
+       "2     Arizona     6392017          4.7           AZ\n",
+       "3    Arkansas     2915918          5.6           AR\n",
+       "4  California    37253956          4.4           CA"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -28,12 +91,12 @@
     "from statistics import mean\n",
     "\n",
     "state = pd.read_csv('Murdare_US_State.csv')\n",
-    "state.info()"
+    "state.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -53,11 +116,20 @@
        "7694135.625"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "state['Population'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
