--- a/central_tendency/main.ipynb
+++ b/central_tendency/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -81,14 +81,14 @@
        "4  California    37253956          4.4           CA"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "from statistics import mean\n",
+    "from scipy.stats import trim_mean\n",
     "\n",
     "state = pd.read_csv('Murdare_US_State.csv')\n",
     "state.head()"
@@ -127,10 +127,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7694135.625"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trim_mean(state['Population'], 0.1)"
+   ]
   }
  ],
  "metadata": {
