calulated the median

--- a/central_tendency/main.ipynb
+++ b/central_tendency/main.ipynb
@@ -144,6 +144,26 @@
    "source": [
     "trim_mean(state['Population'], 0.1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4176916.5"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state['Population'].median()"
+   ]
   }
  ],
  "metadata": {
