--- a/central_tendency/main.ipynb
+++ b/central_tendency/main.ipynb
@@ -164,6 +164,27 @@
    "source": [
     "state['Population'].median()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12105745.29585633"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# caculate standard deviation\n",
+    "state['Population'].std()"
+   ]
   }
  ],
  "metadata": {
