Calculation of quantile

--- a/central_tendency/main.ipynb
+++ b/central_tendency/main.ipynb
@@ -185,6 +185,27 @@
     "# caculate standard deviation\n",
     "state['Population'].std()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2958479.25"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# calulate Quantile\n",
+    "state['Population'].quantile(0.75) - state['Population'].quantile(0.25)"
+   ]
   }
  ],
  "metadata": {
