--- a/central_tendency/main.ipynb
+++ b/central_tendency/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "4  California    37253956          4.4           CA"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,6 +89,7 @@
    "source": [
     "import pandas as pd\n",
     "from scipy.stats import trim_mean\n",
+    "from statsmodels import robust\n",
     "\n",
     "state = pd.read_csv('Murdare_US_State.csv')\n",
     "state.head()"
@@ -205,6 +206,26 @@
    "source": [
     "# calulate Quantile\n",
     "state['Population'].quantile(0.75) - state['Population'].quantile(0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2576836.044572552"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "robust.scale.mad(state['Population'])"
    ]
   }
  ],
